edit email link

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <li><a href="https://github.com/aikot1125" class="icon brands fa-github"><span class="label">Github</span></a></li>
                 <li><a href="https://www.linkedin.com/in/aiko-takemura-9786b337/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
                 <li><a href="https://twitter.com/jpmom_coder" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="aiko.takemura@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="mailto:aiko.takemura@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
                 <!-- <li>&copy; Untitled</li> -->
