--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
                     <!-- image size: 750 x 750 -->
-                    <a href="https://sherrynance.github.io/emailnewsletter/" class="image fit thumb" target="_blank"><img src="images/newsletter.png" alt="" /></a>
+                    <a href="https://sherrynance.github.io/emailnewsletter/" class="image fit thumb" target="_blank"><img src="images/newsletter-min.png" alt="" /></a>
                     <h3>E-mail Newsletter
                         <a href="https://github.com/sherrynance/emailnewsletter" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></h3>
                     <p>Pair programmed an E-mail Newsletter for a farmers market</p>
@@ -43,7 +43,7 @@
                 </article>
 
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="#" class="image fit thumb"><img src="images/blogpost.png" alt="" /></a>
+                    <a href="#" class="image fit thumb"><img src="images/blogpost-min.png" alt="" /></a>
                     <h3>Technical Tutorial Blog Post
                         <a href="#" class="icon brands fa-github"><span class="label">Github</span></a>
                     </h3>
