Update blog post links

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 </article>
 
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="#" class="image fit thumb"><img src="images/blogpost-min.png" alt="" /></a>
+                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_AQuickBeginnersGuideToGitAndGitHub.html" class="image fit thumb"><img src="images/blogpost-min.png" alt="" /></a>
                     <h3>Technical Tutorial Blog Post
-                        <a href="#" class="icon brands fa-github"><span class="label">Github</span></a>
+                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github"><span class="label">Github</span></a>
                     </h3>
                     <p>Published a blog post about Git and GitHub on the Moms Can Code Blog</p>
                     <p>Languages used: HTML, CSS</p>
