edit portfolio section and add publication section

--- a/index.html
+++ b/index.html
@@ -33,44 +33,29 @@
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <!-- image size: 750 x 750 -->
-                    <a href="https://sherrynance.github.io/emailnewsletter/" class="image fit thumb" target="_blank"><img src="images/newsletter-min.png" alt="" /></a>
-                    <h3>E-mail Newsletter
-                        <a href="https://github.com/sherrynance/emailnewsletter" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></h3>
-                    <p>Pair programmed an E-mail Newsletter for a farmers market</p>
-                    <p>Language used: HTML</p>
-                    <p>Tools used: Git, GitHub</p>
+                    <a href="https://authenticgrace.netlify.com/" class="image fit thumb"><img src="images/authenticGrace.png" alt="Image of Authentic Grace website" /></a>
+                    <h3>E-commerce Website v1
+                        <a href="https://github.com/aikot1125/MCC_BoutiqueShop" class="icon brands fa-github github-repo"></a>
+                        <a href="https://www.figma.com/file/ekYG9hWDABlIK43Rx2hubZ/MCC-PJ-%233---Sarah%2FJacqueline%2FAiko?node-id=0%3A1" class="icon brands fa-figma figma-repo"></a>
+                    </h3>
+                    <ul>
+                        <li>Deployed a fictional e-commerce website  in a group project</li>
+                        <li>Languages used: HTML, CSS, JavaScript</li>
+                        <li>Tools used: Git, GitHub, Figma</li>
+                    </ul>
                 </article>
 
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_AQuickBeginnersGuideToGitAndGitHub.html" class="image fit thumb"><img src="images/blogpost-min.png" alt="" /></a>
-                    <h3>Technical Tutorial Blog Post
-                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github"><span class="label">Github</span></a>
-                    </h3>
-                    <p>Published a blog post about Git and GitHub on the Moms Can Code Blog</p>
-                    <p>Languages used: HTML, CSS</p>
-                    <p>Tools used: Git, GitHub</p>
+                    <a href="https://sherrynance.github.io/emailnewsletter/" class="image fit thumb" target="_blank"><img src="images/htmlNewsletter.png" alt="Image of HTML Newsletter"/></a>
+                    <h3>E-mail Newsletter
+                        <a href="https://github.com/sherrynance/emailnewsletter" class="icon brands fa-github github-repo" target="_blank"></a></h3>
+                    <ul>
+                        <li>Pair programmed a fictional E-mail Newsletter for a farmers market</li>
+                        <li>Language used: HTML</li>
+                        <li>Tools used: Git, GitHub</li>
+                    </ul>
                 </article>
-                <!-- <article class="col-6 col-12-xsmall work-item">
-                    <a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-                    <h3>Tortor metus commodo</h3>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </article>
-                <article class="col-6 col-12-xsmall work-item">
-                    <a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-                    <h3>Quam neque phasellus</h3>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </article>
-                <article class="col-6 col-12-xsmall work-item">
-                    <a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-                    <h3>Nunc enim commodo aliquet</h3>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </article>
-                <article class="col-6 col-12-xsmall work-item">
-                    <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-                    <h3>Risus ornare lacinia</h3>
-                    <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                </article> -->
+    
             </div>
             <!-- <ul class="actions">
                 <li><a href="#" class="button">Full Portfolio</a></li>
@@ -79,6 +64,37 @@
 
         <!-- Two -->
         <section id="two">
+            <header class="major">
+                <h2>My Publications</h2>
+            </header>
+            <div class="row">
+                <article class="col-6 col-12-xsmall work-item">
+                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_AQuickBeginnersGuideToGitAndGitHub.html" class="publication" target="_blank">A Quick Beginner's Guide To Git and GitHub</a>
+                    <h3>Moms Can Code Blog
+                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo" target="_blank"><span class="label">Github</span></a>
+                    </h3>
+                    <ul>
+                        <li>Published a blog post about the what and how of Git and GitHub targeting beginners</li>
+                        <li>Languages used: HTML, CSS</li>
+                        <li>Tools used: Git, GitHub</li>
+                    </ul>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a href="#" class="publication" target="_blank">3 reasons why I recommend Notion for code learners</a>
+                    <h3>Moms Can Code Blog
+                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo" target="_blank"><span class="label">Github</span></a>
+                    </h3>
+                    <ul>
+                        <li>Published a blog post about why Notion is a recommended note taking tool for code learners</li>
+                        <li>Languages used: HTML, CSS</li>
+                        <li>Tools used: Git, GitHub</li>
+                    </ul>
+                </article>
+            </div>
+        </section>
+
+        <!-- Three -->
+        <section id="three">
             <header class="major">
                 <h2>About Me</h2>
             </header>
@@ -104,8 +120,8 @@
             </ul>
         </section>
 
-        <!-- Three -->
-        <section id="three">
+        <!-- Four -->
+        <section id="four">
             <header class="major">
                 <h2>Get In Touch</h2>
                 <!-- <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p> -->
