add additional links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
-            <h1><strong>I am Aiko Takemura</strong><br /> - an aspiring web developer<br /> from Japan.</h1>
+            <h1><strong>I am Aiko Takemura</strong><br /> - a web developer<br /> from Japan.</h1>
         </div>
     </header>
 
@@ -34,14 +34,15 @@
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="https://authenticgrace.netlify.com/" class="image fit thumb"><img src="images/authenticGrace.png" alt="Image of Authentic Grace website" /></a>
-                    <h3>E-commerce Website v1
+                    <h3>E-commerce Website
                         <a href="https://github.com/aikot1125/MCC_BoutiqueShop" class="icon brands fa-github github-repo"></a>
                         <a href="https://www.figma.com/file/ekYG9hWDABlIK43Rx2hubZ/MCC-PJ-%233---Sarah%2FJacqueline%2FAiko?node-id=0%3A1" class="icon brands fa-figma figma-repo"></a>
                     </h3>
                     <ul>
-                        <li>Deployed a fictional e-commerce website  in a group project</li>
+                        <li>Deployed a fictional e-commerce website in a group project</li>
                         <li>Languages used: HTML, CSS, JavaScript</li>
                         <li>Tools used: Git, GitHub, Figma</li>
+                        <li class="accesibility-report"><a href="https://docs.google.com/document/d/e/2PACX-1vS07TY8Rnk6NJkrWsftcJTO91j6Gviuh1XxSpPK9OKp0ai-qHX4BjVoVEFIcOKpZmeEt1xVzQX-0M8c/pub" class="accesibility-report">Accessibility Audit Report</a></li>
                     </ul>
                 </article>
 
@@ -80,7 +81,7 @@
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="#" class="publication" target="_blank">3 reasons why I recommend Notion for code learners</a>
+                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_3ReasonsToRrecommendNotion.html" class="publication" target="_blank">3 reasons why I recommend Notion for code learners</a>
                     <h3>Moms Can Code Blog
                         <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo" target="_blank"><span class="label">Github</span></a>
                     </h3>
