Update My Portfolio content

--- a/index.html
+++ b/index.html
@@ -33,30 +33,50 @@
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://authenticgrace.netlify.com/" class="image fit thumb"><img src="images/authenticGrace.png" alt="Image of Authentic Grace website" /></a>
-                    <h3>E-commerce Website
-                        <a href="https://github.com/aikot1125/MCC_BoutiqueShop" class="icon brands fa-github github-repo"></a>
-                        <a href="https://www.figma.com/file/ekYG9hWDABlIK43Rx2hubZ/MCC-PJ-%233---Sarah%2FJacqueline%2FAiko?node-id=0%3A1" class="icon brands fa-figma figma-repo"></a>
+                    <a href="https://breadbeacon.netlify.com/" class="image fit thumb" target="_blank"><img
+                            src="images/breadBeacon.png" alt="Image of Bread Beacon website" /></a>
+                    <h3>Food Resource Website
+                        <a href="https://github.com/amymcgowan/mcc-c4-t2-final-project"
+                            class="icon brands fa-github github-repo" target="_blank"></a>
+                        <a href="https://www.figma.com/file/8YjEBZbz8hxEmoX9fGkWri/Final-Project-MCC-Cohort-4-Team-2?node-id=14%3A2"
+                            class="icon brands fa-figma figma-repo" target="_blank"></a>
                     </h3>
                     <ul>
-                        <li>Deployed a fictional e-commerce website in a group project</li>
-                        <li>Languages used: HTML, CSS, JavaScript</li>
-                        <li>Tools used: Git, GitHub, Figma</li>
-                        <li class="accesibility-report"><a href="https://docs.google.com/document/d/e/2PACX-1vS07TY8Rnk6NJkrWsftcJTO91j6Gviuh1XxSpPK9OKp0ai-qHX4BjVoVEFIcOKpZmeEt1xVzQX-0M8c/pub" class="accesibility-report">Accessibility Audit Report</a></li>
+                        <li>Deployed a responsive food resource website for US college students in a group project </li>
+                        <li>Languages used: HTML, CSS</li>
+                        <li>Tools used: Git, GitHub, Figma, Miro Board, Slack, Whereby</li>
                     </ul>
                 </article>
 
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://sherrynance.github.io/emailnewsletter/" class="image fit thumb" target="_blank"><img src="images/htmlNewsletter.png" alt="Image of HTML Newsletter"/></a>
-                    <h3>E-mail Newsletter
-                        <a href="https://github.com/sherrynance/emailnewsletter" class="icon brands fa-github github-repo" target="_blank"></a></h3>
+                    <a href="https://authenticgrace.netlify.com/" class="image fit thumb" target="_blank"><img
+                            src="images/authenticGrace.png" alt="Image of Authentic Grace website" /></a>
+                    <h3>E-commerce Website
+                        <a href="https://github.com/aikot1125/MCC_BoutiqueShop"
+                            class="icon brands fa-github github-repo" target="_blank"></a>
+                        <a href="https://www.figma.com/file/ekYG9hWDABlIK43Rx2hubZ/MCC-PJ-%233---Sarah%2FJacqueline%2FAiko?node-id=0%3A1"
+                            class="icon brands fa-figma figma-repo" target="_blank"></a>
+                    </h3>
                     <ul>
-                        <li>Pair programmed a fictional E-mail Newsletter for a farmers market</li>
-                        <li>Language used: HTML</li>
-                        <li>Tools used: Git, GitHub</li>
+                        <li>Deployed a front-end e-commerce website in a group project</li>
+                        <li>Languages used: HTML, CSS, JavaScript</li>
+                        <li>Tools used: Git, GitHub, Figma, Slack, Whereby</li>
                     </ul>
                 </article>
-    
+
+                <article class="col-6 col-12-xsmall work-item">
+                    <a href="https://sherrynance.github.io/emailnewsletter/" class="image fit thumb"
+                        target="_blank"><img src="images/htmlNewsletter.png" alt="Image of HTML Newsletter" /></a>
+                    <h3>E-mail Newsletter
+                        <a href="https://github.com/sherrynance/emailnewsletter"
+                            class="icon brands fa-github github-repo" target="_blank"></a></h3>
+                    <ul>
+                        <li>Pair programmed an E-mail Newsletter for a farmers market</li>
+                        <li>Language used: HTML</li>
+                        <li>Tools used: Git, GitHub, Slack, Whereby</li>
+                    </ul>
+                </article>
+
             </div>
             <!-- <ul class="actions">
                 <li><a href="#" class="button">Full Portfolio</a></li>
@@ -70,9 +90,11 @@
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_AQuickBeginnersGuideToGitAndGitHub.html" class="publication" target="_blank">A Quick Beginner's Guide To Git and GitHub</a>
+                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_AQuickBeginnersGuideToGitAndGitHub.html"
+                        class="publication" target="_blank">A Quick Beginner's Guide To Git and GitHub</a>
                     <h3>Moms Can Code Blog
-                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo" target="_blank"><span class="label">Github</span></a>
+                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo"
+                            target="_blank"><span class="label">Github</span></a>
                     </h3>
                     <ul>
                         <li>Published a blog post about the what and how of Git and GitHub targeting beginners</li>
@@ -81,12 +103,15 @@
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_3ReasonsToRrecommendNotion.html" class="publication" target="_blank">3 reasons why I recommend Notion for code learners</a>
+                    <a href="https://moms-can-co.github.io/blog/takemura_cohort4_3ReasonsToRrecommendNotion.html"
+                        class="publication" target="_blank">3 reasons why I recommend Notion for code learners</a>
                     <h3>Moms Can Code Blog
-                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo" target="_blank"><span class="label">Github</span></a>
+                        <a href="https://github.com/moms-can-co/blog" class="icon brands fa-github github-repo"
+                            target="_blank"><span class="label">Github</span></a>
                     </h3>
                     <ul>
-                        <li>Published a blog post about why Notion is a recommended note taking tool for code learners</li>
+                        <li>Published a blog post about why Notion is a recommended note taking tool for code learners
+                        </li>
                         <li>Languages used: HTML, CSS</li>
                         <li>Tools used: Git, GitHub</li>
                     </ul>
@@ -99,12 +124,21 @@
             <header class="major">
                 <h2>About Me</h2>
             </header>
-            <p>After working in the advertising industry in Japan for 12 years, Aiko moved to the US to be with her loving family. She is currently a full time mom of an energetic 2 year old boy and expecting another wild one very soon. To fulfill her hunger
-                for new learning, she currently immerses herself in coding at the Moms Can Code School with an aim to become a web developer.
-                <br><br> During her career, Aiko has always been passionate about operational excellence and project management. She loves thinking about creative ways to work with efficiency and effectiveness. In her most recent job at Facebook, she
-                contributed to the growth and success of the market through strong marketing consultation for her branding clients as well as empowering internal teams by building operational playbooks and strategic blueprints. Aiko is a well organized,
+            <p>After working in the advertising industry in Japan for 12 years, Aiko moved to the US to be with her
+                loving family. She is currently a full time mom of an energetic 2 year old boy and expecting another
+                wild one very soon. To fulfill her hunger
+                for new learning, she currently immerses herself in coding at the Moms Can Code School with an aim to
+                become a web developer.
+                <br><br> During her career, Aiko has always been passionate about operational excellence and project
+                management. She loves thinking about creative ways to work with efficiency and effectiveness. In her
+                most recent job at Facebook, she
+                contributed to the growth and success of the market through strong marketing consultation for her
+                branding clients as well as empowering internal teams by building operational playbooks and strategic
+                blueprints. Aiko is a well organized,
                 data-driven and responsible collaborator who enjoys cross functional teamwork.
-                <br><br> Along with her future skillset in coding, Aiko is eager to dive back into the workforce in 2020 after delivering her second son. She looks forward to be involved in product development that makes positive contribution to better
+                <br><br> Along with her future skillset in coding, Aiko is eager to dive back into the workforce in 2020
+                after delivering her second son. She looks forward to be involved in product development that makes
+                positive contribution to better
                 education or health in the world, especially for the future of our children including her two boys!</p>
             <!-- <header class="major"> -->
             <h2>My skills</h2>
@@ -117,7 +151,7 @@
             </ul>
             <!-- </header> -->
             <ul class="actions">
-                <li><a href="#" class="button" target="_blank">Download Resume</a></li>
+                <li><a href="#" class="button" target="_blank">Download Resume (WIP)</a></li>
             </ul>
         </section>
 
@@ -129,7 +163,8 @@
             </header>
             <div class="row">
                 <div class="col-8 col-12-small">
-                    <form method="post" id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/aiko.takemura@gmail.com">
+                    <form method="post" id="fs-frm" name="simple-contact-form" accept-charset="utf-8"
+                        action="https://formspree.io/aiko.takemura@gmail.com">
                         <fieldset id="fs-frm-inputs">
                             <div class="row gtr-uniform gtr-50">
                                 <!-- <label for="name">Name</label> -->
@@ -145,7 +180,8 @@
                                 <!-- <label for="message">Message</label> -->
                                 <div class="col-12">
                                     <label for="message">Message</label>
-                                    <textarea name="message" id="message" placeholder="Please type your message here" rows="4" required></textarea>
+                                    <textarea name="message" id="message" placeholder="Please type your message here"
+                                        rows="4" required></textarea>
                                 </div>
                                 <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
                             </div>
@@ -181,10 +217,14 @@
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
-                <li><a href="https://github.com/aikot1125" class="icon brands fa-github"><span class="label">Github</span></a></li>
-                <li><a href="https://www.linkedin.com/in/aiko-takemura-9786b337/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-                <li><a href="https://twitter.com/jpmom_coder" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="mailto:aiko.takemura@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="https://github.com/aikot1125" class="icon brands fa-github"><span
+                            class="label">Github</span></a></li>
+                <li><a href="https://www.linkedin.com/in/aiko-takemura-9786b337/" class="icon brands fa-linkedin"><span
+                            class="label">Twitter</span></a></li>
+                <li><a href="https://twitter.com/jpmom_coder" class="icon brands fa-twitter"><span
+                            class="label">Twitter</span></a></li>
+                <li><a href="mailto:aiko.takemura@gmail.com" class="icon solid fa-envelope"><span
+                            class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
                 <!-- <li>&copy; Untitled</li> -->
