--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://breadbeacon.netlify.com/" class="image fit thumb" target="_blank"><img
-                            src="images/breadBeacon.png" alt="Image of Bread Beacon website" /></a>
+                    <a href="/foodResource.html" class="image fit thumb"><img src="images/breadBeacon.png"
+                            alt="Image of Bread Beacon website" /></a>
                     <h3>Food Resource Website
                         <a href="https://github.com/amymcgowan/mcc-c4-t2-final-project"
                             class="icon brands fa-github github-repo" target="_blank"></a>
@@ -98,8 +98,6 @@
                     </h3>
                     <ul>
                         <li>Published a blog post about the what and how of Git and GitHub targeting beginners</li>
-                        <li>Languages used: HTML, CSS</li>
-                        <li>Tools used: Git, GitHub</li>
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
@@ -112,8 +110,6 @@
                     <ul>
                         <li>Published a blog post about why Notion is a recommended note taking tool for code learners
                         </li>
-                        <li>Languages used: HTML, CSS</li>
-                        <li>Tools used: Git, GitHub</li>
                     </ul>
                 </article>
             </div>
