Change design elements of top page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
-            <h1><strong>I am Aiko Takemura</strong><br /> - a web developer<br /> from Japan.</h1>
+            <h1>I am Aiko Takemura</h1>
+            <br>
+            <h2>web developer + web marketer from Japan.</h2>
         </div>
     </header>
 
