--- a/food-resource.html
+++ b/food-resource.html
@@ -20,7 +20,9 @@
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
-            <h1><strong>I am Aiko Takemura</strong><br /> - a web developer<br /> from Japan.</h1>
+            <h1>Hi, I am Aiko Takemura</h1>
+            <br>
+            <h2>I'm a web developer + web marketer from Japan.</h2>
         </div>
     </header>
 
@@ -34,7 +36,7 @@
                 <p class="portfolio-title">As a final group project of Moms Can Code School, we built and deployed a
                     resourceful website for US college students in need of food assistance.</p>
             </header>
-            <a href="https://breadbeacon.netlify.com/" target="_blank">
+            <a href="food-resource.html" target="_blank">
                 <img src="/images/breadBeacon_highres.png" alt="Image of Bread Beacon website" width="100%">
             </a>
             <br>
