--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
             <h1>I am Aiko Takemura</h1>
-            <br>
-            <h2>web developer + web marketer from Japan.</h2>
+            <h2>I'm a web developer + web marketer from Japan.</h2>
         </div>
     </header>
 
