--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="/foodResource.html" class="image fit thumb"><img src="images/breadBeacon.png"
+                    <a href="/food-resource.html" class="image fit thumb"><img src="images/breadBeacon.png"
                             alt="Image of Bread Beacon website" /></a>
                     <h3>Food Resource Website
                         <a href="https://github.com/amymcgowan/mcc-c4-t2-final-project"
