add link to food resource page

--- a/food-resource.html
+++ b/food-resource.html
@@ -20,8 +20,7 @@
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
-            <h1>Hi, I am Aiko Takemura</h1>
-            <br>
+            <h1>I am Aiko Takemura</h1>
             <h2>I'm a web developer + web marketer from Japan.</h2>
         </div>
     </header>
@@ -36,8 +35,8 @@
                 <p class="portfolio-title">As a final group project of Moms Can Code School, we built and deployed a
                     resourceful website for US college students in need of food assistance.</p>
             </header>
-            <a href="food-resource.html" target="_blank">
-                <img src="/images/breadBeacon_highres.png" alt="Image of Bread Beacon website" width="100%">
+            <a class="portfolio-title" href="https://breadbeacon.netlify.com/" target="_blank">
+                <img src="images/breadBeacon_highres.png" alt="Image of Bread Beacon website" width="75%">
             </a>
             <br>
             <br>
