--- a/food-resource.html
+++ b/food-resource.html
@@ -85,7 +85,7 @@
             </div>
             <h2>Video walkthrough</h2>
             <video width="100%" height="300px" controls>
-                <source src="/images/BREAD_BEACON.mp4" type="video/mp4">
+                <source src="images/BREAD_BEACON.mp4" type="video/mp4">
                 Your browser does not support video.
             </video>
 
