--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
             <h1>I am Aiko Takemura</h1>
             <h2>I'm a web developer + web marketer from Japan.</h2>
+            <a class="navlink" href="#portfolio-header">My Portfolio</a>
+            <a class="navlink" href="#publications-header">My Publications</a>
+            <a class="navlink" href="#aboutme-header">About Me</a>
+            <a class="navlink" href="#myskills-header">My Skills</a>
+            <a class="navlink" href="#getintouch-header">Get In Touch</a>
         </div>
     </header>
 
@@ -30,7 +35,7 @@
         <!-- One -->
         <section id="one">
             <header class="major">
-                <h2>My Portfolio</h2>
+                <h2 id="portfolio-header">My Portfolio</h2>
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
@@ -87,7 +92,7 @@
         <!-- Two -->
         <section id="two">
             <header class="major">
-                <h2>My Publications</h2>
+                <h2 id="publications-header">My Publications</h2>
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
@@ -119,7 +124,7 @@
         <!-- Three -->
         <section id="three">
             <header class="major">
-                <h2>About Me</h2>
+                <h2 id="aboutme-header">About Me</h2>
             </header>
             <p>After working in the advertising industry in Japan for 12 years, Aiko moved to the US to be with her
                 loving family. She is currently a full time mom of an energetic 2 year old boy and expecting another
@@ -137,8 +142,9 @@
                 after delivering her second son. She looks forward to be involved in product development that makes
                 positive contribution to better
                 education or health in the world, especially for the future of our children including her two boys!</p>
-            <!-- <header class="major"> -->
-            <h2>My skills</h2>
+            <header class="major">
+                <h2 id="myskills-header">My Skills</h2>
+            </header>
             <ul class="skill-icons">
                 <li><span class="label icon brands fa-html5"></span></li>
                 <li><span class="label icon brands fa-css3-alt"></span></li>
@@ -155,7 +161,7 @@
         <!-- Four -->
         <section id="four">
             <header class="major">
-                <h2>Get In Touch</h2>
+                <h2 id="getintouch-header">Get In Touch</h2>
                 <!-- <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p> -->
             </header>
             <div class="row">
